src/styles/home.css
/* Author:XrXr
https://github.com/XrXr/WhenIsKateLive
License:MIT */
.center-region {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 70%;
    min-height: 767px;
    max-width: 1024px;
    min-width: 450px;
    margin: auto;
    background-color: #F1EECC;
    position: absolute;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
    -webkit-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
    -moz-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
    box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75)
}
.soft-hide {
    opacity: 0;
    height: 0
}
h1, h3, th, td, .about-center, .notice-center {
    text-align: center
}
h1 {
    margin-top: 20px;
    margin-bottom: 20px
}
h3 {
    margin-bottom: 0px
}
table {
    width: 100%
}
a:hover {
    text-decoration: none
}
body {
    background-color: pink
}
a {
    pointer-events: all
}
.overlay-block {
    width: 100%;
    height: 60%;
    max-width: 1024px;
    background-image: url(../assets/overlay.png);
    background-position: center 0;
    background-repeat: no-repeat
}
.about-blcok {
    position: absolute;
    left: 10px;
    width: calc(100% - 10px);
    bottom: 0px
}
.about-block-element {
    pointer-events: none;
    position: absolute;
    bottom: 0;
    width: inherit
}
.about-right {
    text-align: right
}
@media (max-width:894px) {
    .about-blcok {
        display: none
    }
}
.twitter-username, .twitch-username, .youtube-username {
    color: #333;
    font-size: 40px;
    line-height: 1
}
.twitter-username::before {
    content: "@lovelykaitkim"
}
.twitch-username::before {
    content: "LovelyMomo"
}
.youtube-username::before {
    content: "ProBoxStudio"
}
.twitch-block, .youtube-block, .twitter-block {
    color: inherit;
    display: inline-block;
    position: relative;
    margin-left: 50px;
    margin-top: 25px;
    margin-bottom: 25px;
    float: left
}
.prefix {
    color: #333 !important;
    cursor: default
}
.disguise {
    text-decoration: none !important
}
.disguise:focus {
    outline: 0
}
.disguise:hover {
    color: inherit;
    text-decoration: none
}
.twitch-logo, .youtube-logo, .twitter-logo {
    position: relative;
    width: 45px;
    height: 45px;
    float: left
}
.twitter-block {
    top: 0;
    left: 0;
    margin-left: 10px;
    float: left
}
.twitter-logo {
    top: 5px
}
.youtube-logo {
    top: 3px
}
.youtube-username {
    margin-left: 10px
}
@media (max-width:1430px) {
    .twitter-username::before {
        content: ""
    }
    .twitch-username::before {
        content: ""
    }
    .youtube-username::before {
        content: ""
    }
    .twitch-block {
        position: absolute;
        left: calc(50% - 22.5px);
        margin-left: 0;
        margin-right: 0
    }
    .youtube-block {
        right: 0px;
        position: absolute
    }
}

